# finance-copilot

./: .gitignore  PLAN.md  README.md  alembic.ini  pyproject.toml
.codex/: config.toml
alembic/versions/: 20260302_000001_stage1_init.py  20260302_000002_stage4_admin_foundation.py  20260302_000003_stage5_family_mode.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin_dashboard.py  admin_subscriptions.py  copilot.py  entitlements.py  family.py  financial_snapshots.py  health.py  premium.py
app/core/: config.py  errors.py  observability.py  rate_limit.py  security.py
app/db/: session.py
app/db/models/: __init__.py  account_link.py  admin_audit_log.py  ai_prompt_log.py  financial_snapshot.py  household.py  user_entitlement.py
app/schemas/: admin.py  common.py  copilot.py  entitlement.py  family.py  financial_snapshot.py  premium.py
app/services/: admin.py  ai_explainer.py  copilot.py  entitlements.py  family.py  financial_snapshots.py  intent_router.py  premium_engines.py  usage_tracking.py
tests/: conftest.py  test_admin_stage4.py  test_auth.py  test_copilot.py  test_e2e_regression_stage5.py  test_family_stage5.py  test_financial_snapshots.py  test_hardening_stage5.py  test_health.py  test_premium_engines.py
